--- a/frontend/src/app/ventas/sell/sell-detail.component.html
+++ b/frontend/src/app/ventas/sell/sell-detail.component.html
@@ -17,11 +17,11 @@
   </div>
 </div>
 
-<div fxLayout="row wrap" style="    position: relative;overflow: scroll;height: -webkit-fill-available;">
+<div fxLayout="row wrap" style="position: relative;overflow: scroll;height: -webkit-fill-available;">
   <div fxFlex.gt-lg="100" fxFlex.gt-md="100" fxFlex.gt-xs="100" fxFlex="100">
     <mat-card>
       <mat-card-content>
-        <h4>Detalles de la Venta</h4>
+        <!--<h4>Detalles de la Venta</h4>-->
         <form class="basic-form">
           <div fxLayout="row wrap">
             <div fxFlex.gt-xs="25" fxFlex="100">
@@ -71,11 +71,11 @@
           </div>
 
 
-          <div class="responsive-table">
+          <div style="margin-top: 10px;" class="responsive-table">
             <mat-table #table matSort [dataSource]="dataSourceProductosDetalles" class="mat-elevation-z8">
 
               <ng-container matColumnDef="producto">
-                <mat-header-cell *matHeaderCellDef> Producto </mat-header-cell>
+                <mat-header-cell style="font-weight: bold; font-size:14px" *matHeaderCellDef> Producto </mat-header-cell>
                 <mat-cell *matCellDef="let row;let i = index">
                   <span class="header-label">Producto:</span>
                   {{row.productoLabel}}
@@ -83,7 +83,7 @@
               </ng-container>
 
               <ng-container matColumnDef="cantidad">
-                <mat-header-cell *matHeaderCellDef> Cantidad </mat-header-cell>
+                <mat-header-cell style="font-weight: bold; font-size:14px" *matHeaderCellDef> Cantidad </mat-header-cell>
                 <mat-cell *matCellDef="let row;let i = index">
                   <span class="header-label">Cant:</span>
                   {{row.cantidad}}
@@ -91,7 +91,7 @@
               </ng-container>
 
               <ng-container matColumnDef="precioVenta">
-                <mat-header-cell *matHeaderCellDef> Precio </mat-header-cell>
+                <mat-header-cell style="font-weight: bold; font-size:14px" *matHeaderCellDef> Precio </mat-header-cell>
                 <mat-cell *matCellDef="let row;let i = index">
                   <span class="header-label">PU.:</span>
                   {{parseFloatCustom(row.precioVenta)}}
@@ -99,7 +99,7 @@
               </ng-container>
 
               <ng-container matColumnDef="precioTotal">
-                <mat-header-cell *matHeaderCellDef> Importe </mat-header-cell>
+                <mat-header-cell style="font-weight: bold; font-size:14px" *matHeaderCellDef> Importe </mat-header-cell>
                 <mat-cell *matCellDef="let row;let i = index">
                   <span class="header-label">PT.:</span>
                   {{parseFloatCustom(row.precioVenta*row.cantidad)}}
@@ -111,12 +111,11 @@
             </mat-table>
           </div>
 
-
           <div class="responsive-table">
             <mat-table #table matSort [dataSource]="dataSourceAmortizaciones" class="mat-elevation-z8">
 
               <ng-container matColumnDef="codigo">
-                <mat-header-cell *matHeaderCellDef> Codigo </mat-header-cell>
+                <mat-header-cell style="font-weight: bold; font-size:14px" *matHeaderCellDef> Codigo </mat-header-cell>
                 <mat-cell *matCellDef="let row;let i = index">
                   <span class="header-label">Codigo:</span>
                   {{row.codigo}}
@@ -124,7 +123,7 @@
               </ng-container>
 
               <ng-container matColumnDef="fecha">
-                <mat-header-cell *matHeaderCellDef> Fecha </mat-header-cell>
+                <mat-header-cell style="font-weight: bold; font-size:14px" *matHeaderCellDef> Fecha </mat-header-cell>
                 <mat-cell *matCellDef="let row;let i = index">
                   <span class="header-label">Fecha:</span>
                   {{row.fecha}}
@@ -132,7 +131,7 @@
               </ng-container>
 
               <ng-container matColumnDef="glosa">
-                <mat-header-cell *matHeaderCellDef> Glosa </mat-header-cell>
+                <mat-header-cell style="font-weight: bold; font-size:14px" *matHeaderCellDef> Glosa </mat-header-cell>
                 <mat-cell *matCellDef="let row;let i = index">
                   <span class="header-label">Glosa:</span>
                   {{row.glosa}}
@@ -140,7 +139,7 @@
               </ng-container>
 
               <ng-container matColumnDef="metodo">
-                <mat-header-cell *matHeaderCellDef> Metodo </mat-header-cell>
+                <mat-header-cell style="font-weight: bold; font-size:14px" *matHeaderCellDef> Metodo </mat-header-cell>
                 <mat-cell *matCellDef="let row;let i = index">
                   <span class="header-label">Metodo:</span>
                   {{row.tipoDePagoNombre}}
@@ -148,7 +147,7 @@
               </ng-container>
 
               <ng-container matColumnDef="importe">
-                <mat-header-cell *matHeaderCellDef> Importe </mat-header-cell>
+                <mat-header-cell style="font-weight: bold; font-size:14px" *matHeaderCellDef> Importe </mat-header-cell>
                 <mat-cell *matCellDef="let row;let i = index">
                   <span class="header-label">Importe:</span>
                   {{row.montoPagado}}
@@ -156,7 +155,7 @@
               </ng-container>
 
               <ng-container matColumnDef="comprobante">
-                <mat-header-cell *matHeaderCellDef> Comprobante </mat-header-cell>
+                <mat-header-cell style="font-weight: bold; font-size:14px" *matHeaderCellDef> Comprobante </mat-header-cell>
                 <mat-cell *matCellDef="let row;let i = index" style="    flex-direction: column;">
                   <span class="header-label">Comprobante:</span>
                   {{row.comprobante}}
@@ -167,7 +166,7 @@
               </ng-container>
 
               <ng-container matColumnDef="imprimir">
-                <mat-header-cell *matHeaderCellDef>  </mat-header-cell>
+                <mat-header-cell style="font-weight: bold; font-size:14px" *matHeaderCellDef>  </mat-header-cell>
                 <mat-cell *matCellDef="let row;let i = index">
                   <a class="ng-star-inserted" [routerLink]="['/print/invoice2/' + entity.id + '/' + i ]">
                     <i class="ti-printer text-info m-r-10"></i>
