--- a/frontend/src/assets/styles/style.scss
+++ b/frontend/src/assets/styles/style.scss
@@ -32,6 +32,9 @@ File: scss
 @import 'responsive';
 @import 'rtl';
 
+@import '~saturn-datepicker/theming';
+@include sat-datepicker-theme($theme);
+
 
 // Red Theme
 
